--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <div class="border" id="gameboard">
             <div class="border" id="topbar">
                     
-                    <h1> WELCOME TO BACTERIA WORLD </h2>
+                    <h1> WELCOME TO BACTERIA WORLD </h1>
 
             </div>
 
@@ -24,33 +24,33 @@
 
             <div class="haze" id="toppick">
                 <div id="allbots">
-                    <div class="bot">
+                    <span class="bot" id="spanallbots">
                             <span class="lifetext"> HP:    </span>
                              <span class="botlife" value="200"> 200 </span>
                               <img class="green" src="images/bacteria1.jpg">
                              
-                    </div>
+                    </span>
 
 
-                    <div class="bot">
+                    <span class="bot" id="spanallbots">
                             <span class="lifetext"> HP:    </span>
                             <span class="botlife" value="300"> 300    </span>
                         <img class="green" src="images/bacteria2.jpg">
-                    </div>
+                    </span>
 
 
-                    <div class="bot">
+                    <span class="bot" id="spanallbots">
                             <span class="lifetext"> HP:    </span>
                             <span class="botlife" value="250">250  </span>
                         <img class="green" src="images/bacteria3.jpg">
-                    </div>
+                    </span>
 
 
-                    <div class="bot">
-                            <span class="lifetext"> HP:    </span>
+                    <span class="bot" id="spanallbots">
+                             <span class="lifetext"> HP:    </span>
                             <span class="botlife" value="275">  275   </span>
                         <img class="green" src="images/bacteria4.jpg">
-                    </div>
+                    </span>
                 </div> 
 
 
